spacing issues, moving over game elements. site mostly done; just want to get game elements for the last two games

--- a/styles.css
+++ b/styles.css
@@ -503,6 +503,7 @@ hr {
         width: 80%;
         margin-left: auto;
         margin-right: auto;
+        margin-top: 30px;
     }
     
     .sponsor-thanks a {
@@ -516,7 +517,7 @@ hr {
         padding: 15px;
         display: inline-block;
         border-radius: 8px;
-        margin-bottom: 15px;
+        margin-bottom: 30px;
         margin-top: 15px;
         margin-left: 0;
     }
@@ -660,59 +661,74 @@ hr {
     }
 
     .season-flex-ou {
+        z-index: -100;
+        position: relative;
         display: flex;
         flex-direction: row;
         align-items: center;
     }
 
     .season-flex-ou img {
+        z-index: -100;
+        position: absolute;
         height: 80px;
         width: auto;
-        margin-left: 0;
-        margin-bottom: 100px;
-        margin-right: 15px;
+        left: 0;
+        margin-left: 200px;
+        margin-bottom: 80px;
     }
 
     .season-flex-su {
+        z-index: -100;
+        position: relative;
         display: flex;
         flex-direction: row;
         align-items: center;
     }
 
     .season-flex-su img {
+        z-index: -100;
+        position: absolute;
         height: 70px;
         width: auto;
-        margin-left: 0;
+        left: 0;
+        margin-left: 200px;
         margin-bottom: 80px;
-        margin-right: 15px;
     }
 
     .season-flex-tip {
+        z-index: -100;
+        position: relative;
         display: flex;
         flex-direction: row;
         align-items: center;
     }
 
     .season-flex-tip img {
+        z-index: -100;
+        position: absolute;
         height: 80px;
         width: auto;
-        margin-left: 0;
-        margin-bottom: 20px;
-        margin-right: 15px;
+        left: 0;
+        margin-left: 200px;
     }
 
     .season-flex-tt {
+        z-index: -100;
+        position: relative;
         display: flex;
         flex-direction: row;
         align-items: center;
     }
 
     .season-flex-tt img {
+        z-index: -100;
+        position: absolute;
         height: 100px;
         width: auto;
-        margin-left: 0;
-        margin-top: 30px;
-        margin-right: 15px;
+        left: 0;
+        margin-left: 200px;
+        margin-top: 40px;
     }
 
     .logo-small img {
@@ -786,9 +802,10 @@ hr {
     }
     
     .footer img {
-        margin: 30px;
-        margin-top: 50px;
+        margin-top: 60px;
         margin-left: 15px;
+        margin-right: 30px;
+        margin-bottom: 0;
         height: 100px;
     }
     
@@ -799,19 +816,17 @@ hr {
     
     .footer h2 {
         margin-left: 15px;
+        margin-top: 40px;
     }
 
     .footer p {
-        margin-left: 15px;
-        margin-right: 15px;
+        margin: 15px;
     }
     
     #insta img {
         width: 25px;
         height: auto;
         margin: 10px;
-        /* margin-top: 10px;
-        margin-bottom: 10px; */
     }
     
     #youtube img {
@@ -935,7 +950,7 @@ hr {
         text-align: center;
         align-items: center;
         display: block;
-        padding: 10px;
+        padding: 15px;
         margin: 40px;
         width: 50%;
         margin-left: auto;
@@ -974,6 +989,7 @@ hr {
         font-family: Oswald, sans-serif;
         list-style-type: none;
         line-height: 1.4;
+        margin-bottom: 20px;  
     }
 
     #join p {
@@ -995,6 +1011,7 @@ hr {
     .sponsor-thanks h1 {
         color: white;
         margin-left: 0;
+        margin-top: 30px;
     }
     
     .sponsor-thanks a {
@@ -1008,7 +1025,7 @@ hr {
         padding: 15px;
         display: inline-block;
         border-radius: 8px;
-        margin-bottom: 15px;
+        margin-bottom: 30px;
         margin-left: 0;
     }
     
@@ -1094,6 +1111,8 @@ hr {
     }
 
     .season-flex-ou {
+        z-index: -100;
+        position: relative;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -1101,13 +1120,18 @@ hr {
     }
 
     .season-flex-ou img {
+        z-index: -100;
+        position: absolute;
         height: 80px;
         width: auto;
-        margin-left: 0;
-        margin-bottom: 60px;
+        left: 0;
+        margin-left: 200px;
+        margin-bottom: 80px;
     }
 
     .season-flex-su {
+        z-index: -100;
+        position: relative;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -1115,12 +1139,18 @@ hr {
     }
 
     .season-flex-su img {
+        z-index: -100;
+        position: absolute;
         height: 80px;
         width: auto;
-        margin-left: 10px;
+        left: 0;
+        margin-left: 200px;
+        margin-bottom: 80px;
     }
 
     .season-flex-tip {
+        z-index: -100;
+        position: relative;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -1128,13 +1158,17 @@ hr {
     }
 
     .season-flex-tip img {
+        z-index: -100;
+        position: absolute;
         height: 100px;
         width: auto;
-        margin-left: 10px;
-        margin-top: 30px;
+        left: 0;
+        margin-left: 200px;
     }
 
     .season-flex-tt {
+        z-index: -100;
+        position: relative;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -1142,10 +1176,13 @@ hr {
     }
 
     .season-flex-tt img {
+        z-index: -100;
+        position: absolute;
         height: 100px;
         width: auto;
-        margin-left: 10px;
-        margin-top: 50px;
+        left: 0;
+        margin-left: 200px;
+        margin-top: 40px;
     }
 
     .center-h3 h3 {
